fix avatar image not fitting on IE

--- a/src/Avatar/Avatar.scss
+++ b/src/Avatar/Avatar.scss
@@ -21,8 +21,8 @@
   justify-content: center;
 
   img {
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
   }
 }
